Remove mappers injection.